<resources>
    <string name="app_name">schwep</string>
    <string name="image_contentDescription">Image</string>
    <string name="lets_get_started_text">Let\'s Get Started</string>
    <string name="intro_text_description">Collaborate and Plan Together Across Multiple Devices on Schwep\'s Minimalist Interface. </string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>

    <string name="sign_up_description_text">Enter your name, Email ID and your Password</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

    <string name="sign_in_description_text">Please Enter your name and Password</string>


    <string name="please_clk_bk_agn_to_ext">Please click back again to exit</string>
    <string name="please_wait">Please wait&#8230;</string>

    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="mobile">Mobile Number</string>
    <string name="update">UPDATE</string>
    <string name="my_profile">My Profile</string>

    <string name="create_board_title">Create Board</string>
    <string name="create">Create</string>
    <string name="board_name">Board Name</string>

    <string name="no_boards_available">No Boards are available!!</string>
    <string name="action_add_list">Add List</string>
    <string name="card_name">Card Name</string>
    <string name="add_card">Add Card</string>
    <string name="title">Title</string>
    <string name="list_name_hint">List Name</string>

    <string name="members">Members</string>

    <string name="add_member">Add Member</string>
    <string name="cancel">Cancel</string>
    <string name="add">ADD</string>
    <string name="search_member">Search Member</string>

    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>
    <string name="select_members">Select Members</string>
    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="pick_a_member">Pick A Member</string>
    <string name="confirmation_message_to_delete_card">Are you sure you want to delete card \'%1$s\'?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="alert">Alert</string>
    <string name="str_select_label_color">Select Label Color</string>
    <string name="delete_card">Delete Card</string>
    <string name="fcm_key">fcm_key">AAAADHSe490:APA91bFoGC_rYPMY-OeuL-5OvAAXBS3hANCoh0BHGNIedKXdsbbgLrXXF1lVTRfRYhGD1wKTdMCSVihwIH5niZH3qulQgQSBl4V9gUOdeGGWZ3HZarJ7mzxpPSqyL3hG57cDOJfeieDZ</string>
    <string name="str_select_member">Select A  Member</string>


</resources>